fix message overflow

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -531,6 +531,20 @@ input[type="radio"]:focus {
     border-radius: 2px;
     color:#888;
     box-shadow: 1px 1px 5px #999;
+	overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 .message .by  {
     margin-top:30px;
